<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:weightSum="6"
    android:padding="16dp"
    android:background="?attr/activityBackground"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:layout_width="match_parent">

        <TextView
            android:id="@+id/quick_faq"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:fontFamily="@font/roboto"
            android:textColor="?secondaryText"
            android:textSize="15sp"
            android:enabled="true"
            android:textIsSelectable="true"
            android:focusable="true"
            android:longClickable="true"
            android:text="@string/quick_faq"
            />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:layout_gravity="center_horizontal" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/noticeContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:fontFamily="@font/roboto"
                    android:textColor="?secondaryText"
                    android:textSize="15sp"
                    android:enabled="true"
                    android:textIsSelectable="true"
                    android:focusable="true"
                    android:longClickable="true"
                    android:text="@string/notice1"
                    />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_width="match_parent">

        <TextView
            android:id="@+id/translators"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginTop="0dp"
            android:fontFamily="@font/roboto"
            android:textColor="?secondaryText"
            android:textSize="15sp"
            android:enabled="true"
            android:textIsSelectable="true"
            android:focusable="true"
            android:longClickable="true"
            android:text="@string/translators"
            />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/translatorsContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_marginTop="0dp"
                    android:fontFamily="@font/roboto"
                    android:textColor="?secondaryText"
                    android:textSize="15sp"
                    android:enabled="true"
                    android:textIsSelectable="true"
                    android:focusable="true"
                    android:longClickable="true"
                    android:text="@string/translators_content"
                    />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>
    </LinearLayout>


</LinearLayout>