<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/lyricsPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDarkSemiDarkTransparent">

        <Button
            android:id="@+id/panel_close_button"
            android:layout_width="@dimen/d36_size"
            android:layout_height="@dimen/d36_size"
            android:layout_alignParentEnd="true"
            android:layout_margin="6dp"
            android:background="@drawable/bg_ripple"
            android:fontFamily="@font/roboto"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/close"
            android:textColor="@color/primaryText_dark"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/topDragBar"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/drag_handle"
            android:src="@drawable/handle_icon" />

        <RelativeLayout
            android:id="@+id/widget_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/topDragBar"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/roboto"
                android:gravity="center_horizontal"
                android:includeFontPadding="false"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="12dp"
                android:text="@string/app_name"
                android:textColor="@color/listDivider"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="gone" />


            <LinearLayout
                android:id="@+id/panelContent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/title"
                android:orientation="vertical">


                <androidx.core.widget.NestedScrollView
                    android:id="@+id/lyricsScrollView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal">

                    <LinearLayout
                        android:id="@+id/inner_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ProgressBar
                            android:id="@+id/progressbar"
                            style="?android:attr/progressBarStyleHorizontal"
                            android:layout_width="match_parent"
                            android:layout_height="8dp"
                            android:indeterminateOnly="true"
                            android:visibility="gone"/>

                        <TextView
                            android:id="@+id/lyricsText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="0dp"
                            android:layout_marginBottom="0dp"
                            android:fontFamily="@font/roboto"
                            android:gravity="center_horizontal"
                            android:lineSpacingMultiplier="1.6"
                            android:textColor="@color/listDivider"
                            android:text="@string/noLyricsFound"
                            android:textSize="17sp"
                            android:visibility="gone"/>

                        <com.lyricslover.onelyrics.lrcview.LrcView xmlns:lrc="http://schemas.android.com/apk/res/com.lyricslover.onelyrics"
                            android:id="@+id/lyricsLrc"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="0dp"
                            android:shadowColor="@android:color/white"
                            android:shadowDx="2"
                            android:shadowDy="2"
                            android:shadowRadius="4"
                            android:textSize="16sp"
                            android:fontFamily="@font/roboto"
                            lrc:currentTextColor="@color/colorPrimary"
                            lrc:dividerHeight="18dp"
                            lrc:normalTextColor="@color/primaryText_dark"
                            android:visibility="gone" />

                    </LinearLayout>

                </androidx.core.widget.NestedScrollView>

            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>
</LinearLayout>